fix: replace Java 9+ List.of/Set.of/Map.of with JDK 8 compatible APIs
- Replace List.of(x) with Arrays.asList(x) (and Collections.unmodifiableList(Arrays.asList(x)) for unmodifiable single-element usage)
- Replace Map.of(k,v) with Collections.singletonMap(k,v) for single entries and HashMap initializer for multi entries
- Add mockito-core and mockito-junit-jupiter test dependencies (pre-existing tests referenced mockito but it was missing from pom.xml)
- All 137 tests pass with mvn verify